--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,25 +20,38 @@ header{
 #blogName{
   font-size: 2em;
   cursor: pointer;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  padding-bottom: 5px;
+  margin-right: 5px;
 }
+
 #subName{
   color: gray
 }
 
 .list{
   background-color: white;
-  box-shadow: 0px 1px 3px rgba(0,0,0,.1);
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
 }
 .list li{
   list-style: none;
-  width: 100%;
+  width: 90%;
   cursor: pointer;
-  margin: 10px 0;
-  padding: 0 10px;
-  display: block
+  padding: 10px 5%;
+  display: block;
+  border-bottom: 1px solid lightgray
+}
+.list li:last-child{
+  border-bottom: none
+}
+.list li p{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .selected{
-  border-left: 5px solid red;
+  border-left: 3px solid black;
   color: black
 }
 
@@ -68,6 +81,16 @@ header{
   border-bottom: 1px lightgray solid
 }
 
+.tag{
+  height: 20px;
+  margin: 0 5px;
+  background-color: #555;
+  color:white;
+  padding: 0 2px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+
 footer{
   float: left;
   width: 100%;
@@ -79,7 +102,10 @@ footer{
 }
 
 footer span{
-  margin: 10px 0;
+  margin-top: 10px;
+}
+footer span:last-child{
+  margin-bottom: 10px
 }
 
 .tools{
@@ -102,8 +128,6 @@ footer span{
   font-size: 30px;
   line-height: 40px;
   color: white;
-}
-.tools button:hover{
 }
 
 .text-center{
